--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^9.0.0",
-    "eslint": "8.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-next": "13.1.5",
     "framer-motion": "^8.5.3",
     "next": "13.1.5",
@@ -31,6 +31,14 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
-    "husky": "^8.0.3"
+    "eslint-config-airbnb": "^19.0.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "npx prettier --write",
+      "npx eslint --fix"
+    ]
   }
 }
