--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint-config-airbnb": "^19.0.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0"
