chore(linter): add jsx suppot to .tsx files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,11 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "airbnb"
-  ]
+  ],
+  "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".jsx", ".tsx"] }
+    ]
+  }
 }
