fix(linter): allow import alias

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "react/jsx-filename-extension": [
       1,
       { "extensions": [".js", ".jsx", ".tsx"] }
-    ]
+    ],
+    "import/extensions": ["never"]
   }
 }
